<resources>
    <string name="app_name">Flare</string>

    <string name="panic">Panic!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Basic Settings -->
    <string name="pref_header_basic">Basic</string>

    <!-- Example Caution Settings -->
    <string name="pref_header_caution">Caution</string>

    <!-- Example Emergency Settings -->
    <string name="pref_header_emergency">Emergency</string>

    <!-- Example Location Settings -->
    <string name="pref_header_location">Location Log</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Phone Number</string>
    <string name="pref_phone_basic">6041234165</string>
    <string name="pref_phone_caution">6041234165</string>
    <string name="pref_phone_emergency">6041234165</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="lockScreenSettings">Lock Screen Settings</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_text">Send Text</string>
    <string name="pref_title_flash">Enable Flashlight</string>
    <string name="pref_title_text2">Send Text</string>
    <string name="pref_title_text3">Send Text</string>
    <string name="pref_title_camera">Enable Camera</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="main_title">@string/app_name</string>
    <string name="pref_title_pattern_lock">Pattern lock</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_theme">[ %1$s ]</string>
    <string name="pref_dialog_title_theme">Select theme</string>
    <string-array name="pref_entries_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="pref_title_about">About</string>

    <string name="pattern_lock_title">Pattern lock</string>
    <string name="pref_title_set_pattern">Set unlock pattern</string>
    <string name="pref_summary_set_pattern_none">[ No pattern set ]</string>
    <string name="pref_summary_set_pattern_has">[ Pattern set ]</string>
    <string name="pref_title_pattern_visible">Make pattern visible</string>
    <string name="pref_summary_pattern_visible_off">Pattern will be hidden when drawing</string>
    <string name="pref_summary_pattern_visible_on">Pattern will be visible when drawing</string>
    <string name="pref_title_clear_pattern">Clear unlock pattern</string>
    <string name="pref_dialog_message_clear_pattern">Clear unlock pattern?</string>
    <string name="pattern_cleared">Unlock pattern has been cleared</string>

    <string name="set_pattern_title">Set unlock pattern</string>
    <string name="confirm_pattern_title">Confirm your unlock pattern</string>
    <string name="reset_pattern_title">Confirm password to reset pattern</string>
    <string name="reset_pattern_message">This is only a demo.\n\nPress "OK" to reset your unlock pattern.</string>
    <string name="pattern_reset">Unlock pattern has been reset</string>

    <string name="about_title">About</string>
    <string name="about_name">PatternLock</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_credit">Zhang Hai 2016</string>

    <string name="title_activity_list">List Activity</string>
</resources>
